# AutoResearch-SMB

./: .gitignore  CLAUDE.md  LLM_SOUL.md  Objectives.md  Problem_definition.md  README.md  implementation_plan.md  local_command.md  pace_graph_orchestrator_dev.slurm  pace_smb_comparable_3runs.slurm  pace_smb_minlp_cpu_24h.slurm  pace_smb_single_scientist_24h.slurm  pace_smb_stage_runner.slurm  pace_smb_two_scientists_24h.slurm  pace_smb_two_scientists_qwen.slurm  pyproject.toml  requirements-optional.txt  requirements.txt
SembaSMB/: .gitignore  README.md  requirement.txt
SembaSMB/src/: __init__.py  smb_config.py  smb_discretization.py  smb_isotherm.py  smb_metrics.py  smb_model.py  smb_optimization.py  smb_plotting.py  smb_solver.py
agents/: BENCHMARK_FAIRNESS.md  FAILURES.md  HYPOTHESES.md  IPOPT_SOLVER_RESOURCES.md  LLM_SOUL.md  Objectives.md  Problem_definition.md  SKILLS.md  failures.json
benchmarks/: __init__.py  agent_db.py  agent_evidence.py  agent_results.py  agent_runner.py  agent_scientists.py  run_stage.py
scripts/: install_ipopt_coinbrew.sh  plot_smb_3d_tradeoff.py  plot_smb_pr_productivity.py  plot_smb_pr_productivity_minlp.py  sync_pace_results.ps1
slurm/: local_command copy 2.md  local_command copy.md  local_command.md  pace_graph_orchestrator_dev.slurm  pace_smb_minlp_cpu_24h.slurm  pace_smb_stage_runner.slurm  pace_smb_two_scientists_24h.slurm  pace_smb_two_scientists_qwen.slurm
src/: __init__.py
src/sembasmb/: __init__.py  config.py  discretization.py  metrics.py  model.py  optimization.py  plotting.py  solver.py
tests/: __init__.py  test_agent_logic.py  test_local_solve.py  test_module_split.py  test_run_stage_parallel.py
