[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-nlp-optimizer"
version = "0.1.0"
description = "Agent-driven nonlinear programming optimizer with SMB chromatography as the reference use case"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Quyen Tran"},
]
keywords = ["NLP", "nonlinear programming", "optimization", "agent", "LLM", "SMB", "chromatography", "Pyomo", "IPOPT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pyomo",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]
notebook = [
    "jupyter",
    "nbconvert",
    "ipykernel",
]
hpc = [
    "psutil",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 120
